# manganis-3195

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/: main.rs
